@@ -13,10 +13,10 @@
 #include <limits.h>
 
 /**
- * weak hashes shutcut
+ * zero hashes shutcut
  */
 
-static const char LM_WEAK_HASH[]    = "aad3b435b51404ee";
+static const char LM_ZERO_HASH[]    = "aad3b435b51404ee";
 static const char LM_MASKED_PLAIN[] = "[notfound]";
 
 /**
